--- a/index.html
+++ b/index.html
@@ -62,19 +62,18 @@
     <img class="dems" src="https://archive.org/download/no-democrats/no-democrats.png" alt="no-democrats">
 
     <ul>
-      <li>Hyperlink to Statement About Police Unions and Prison Abolition TK.</li>
-      <li>Hyperlink to Refoundation Platform TK.</li>
+      <li>Text content goes here. Statements, big news events, platforms, manifestos, that sort of thing could go here.</li>
     </ul>
 
     <h2 id="join">Join us</h2>
 
-    <form action="https://formspree.io/conor.gillies@gmail.com" method="POST">
+    <form action="https://formspree.io/dsarefoundation@gmail.com" method="POST">
       <fieldset>
         <legend>Your information:</legend>
         Name<br>
-        <input type="text" name="name" placeholder="Name" required><br> What DSA chapter are you in?<br>
+        <input type="text" name="name" placeholder="Rosa Luxemburg" required><br> What DSA chapter are you in?<br>
         <input type="text" name="name" placeholder="Los Angeles" required><br> What would you like to help us do?<br>
-        <input type="text" name="name" placeholder="Mutual aid" required><br> What is your DSA-affiliated email?<br>
+        <input type="text" name="name" placeholder="Mutual aid, organizing, self-defense, art, etc" required><br> What is your DSA-affiliated email?<br>
         <input type="email" name="_replyto"><br>
         <input type="submit" value="Send">
       </fieldset>
@@ -87,7 +86,7 @@
 
   <footer>
     <h2 id="contact">Contact us</h2>
-    <p><a href="mailto:refoundation@gmail.com">refoundation@gmail.com</a></p>
+    <p><a href="mailto:DSArefoundation@gmail.com">DSArefoundation@gmail.com</a></p>
   </footer>
 
 </body>
