--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <footer>
     <h2 id="contact">Contact us</h2>
-    <p><a href=https://twitter.com/dsarefoundation">on Twitter</a>
+    <p><a href="https://twitter.com/dsarefoundation">on Twitter</a>
     <p><a href="mailto:DSArefoundation@gmail.com">by Email</a></p>
   </footer>
 
