--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         and fulfilling, we believe that socialism can only be won by confronting and overthrowing capitalists. We want complete economic, social, and political power in the hands of the working class.</li>
       <li>We believe in the centrality of working class struggle. Struggle and class consciousness conditions us for political and economic power. No other class in society, with its unique position literally at the point of production, has the power and
         ability to strike, stopping services and production and restarting these services under its own initiative. Additionally, we understand that organized working class struggle is inextricably linked to all efforts toward struggles for liberation.</li>
-      <li>We believe the immediate goal of the Democratic Socialists of America should be founding a mass working-class, socialist party. We understand that building a mass working class party will not happen overnight, and it require much more than running
+      <li><img class="dems" src="https://archive.org/download/no-democrats/no-democrats.png" alt="no-democrats">We believe the immediate goal of the Democratic Socialists of America should be founding a mass working-class, socialist party. We understand that building a mass working class party will not happen overnight, and it require much more than running
         open socialists or communists for office. Our vision of a mass working-class party has a foundation in movement-building, base-building, labor power, tenant organizations, and local struggles that are linked nationally.</li>
       <li>We believe the Democratic and Republican parties will never look out for the interests of working people; they only represent the interests of the capitalist ruling class. Though there may be short-term gain in running socialists on Democratic ballot
         lines, we believe that any attempts to reform the Democratic Party is ultimately harmful to our aims of building a mass working class party.</li>
@@ -58,8 +58,6 @@
     <img class="hammerandsickle" src="https://68.media.tumblr.com/4bb6d598ced1e52f7df891ead53bcc74/tumblr_o0v4x2rPyR1rydgnho1_500.gif" alt="hammerandsickle">
 
     <h2 id="positions">Essays and position papers</h2>
-
-    <img class="dems" src="https://archive.org/download/no-democrats/no-democrats.png" alt="no-democrats">
 
     <ul>
       <li>Text content goes here. Statements, big news events, platforms, manifestos, that sort of thing could go here.</li>
