Add AOS library

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>DSA Refoundation</title>
-  <link rel="stylesheet" href="stylesheets/styles.css">
-  <script src='assets/js/app.js'></script>
+  <link rel="stylesheet" href="stylesheets/styles.css" />
+  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+  <script src="bower_components/aos/dist/aos.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <a href="#contact">&emsp;Contact</a>
   </nav>
 
-  <section id="introduction">
+  <section id="introduction" data-aos="fade">
     <div>
         <h1>&#9773; Refoundation</h1>
         <h3>The Radical Left Caucus of DSA</h3>
