Animate nav menu with aos

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-  <nav class="menu" id="menu">
-    <a href="#points">Points of Unity&emsp;&#8212;</a>
-    <a href="#positions">&emsp;Position Papers&emsp;&#8212;</a>
-    <a href="#join">&emsp;Join Us&emsp;&#8212;</a>
-    <a href="#contact">&emsp;Contact</a>
+  <nav class="menu" id="menu" data-aos="fade-down" data-aos-anchor="#points"  data-aos-anchor-placement="top-center">
+        <a href="#introduction">&#9773; Refoundation</a>
+      <a href="#points">Points of Unity</a>
+    <a href="#positions">Position Papers</a>
+    <a href="#join">Join Us</a>
+    <a href="#contact">Contact</a>
   </nav>
 
   <section id="introduction" data-aos="fade">
@@ -34,8 +35,8 @@
     </figure>
   </section>
 
-  <section>
-      <h2 id="points">Points of Unity</h2>
+  <section id="points">
+      <h2>Points of Unity</h2>
       <h4>Refoundation begins the project of transforming DSA from a pressure group to a mass working class, socialist party—born of movements for justice, community mobilization, and rank-and-file labor power. As DSA members, we yearn for a future where all power is held by the working class with common ownership of the means of production throughout the world. Here are our points of unity:</h4>
       <ol>
           <li>We are Marxists and revolutionary socialists. We believe that capitalism is an unjust, violent, irrational, and exploitative system which must be overturned and replaced by socialism. Though we support any reform that makes our lives more bearable
@@ -97,7 +98,9 @@
     <p><a href="https://twitter.com/dsarefoundation">on Twitter</a>
     <p><a href="mailto:DSArefoundation@gmail.com">by Email</a></p>
   </footer>
-
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
