Improve mobile styles

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
   <nav class="menu" id="menu" data-aos="fade-down" data-aos-anchor="#points"  data-aos-anchor-placement="top-center">
-        <a href="#introduction">&#9773; Refoundation</a>
-      <a href="#points">Points of Unity</a>
+      <a href="#introduction">&#9773; Refoundation</a>
+      <div class="mobile-hide">
+      <a href="#pou">Points of Unity</a>
     <a href="#positions">Position Papers</a>
     <a href="#join">Join Us</a>
     <a href="#contact">Contact</a>
+      </div>
   </nav>
 
   <section id="introduction" data-aos="fade">
@@ -23,7 +25,7 @@
         <h1>&#9773; Refoundation</h1>
         <h3>The Radical Left Caucus of DSA</h3>
         <nav>
-            <a href="#points">Points of Unity</a>
+            <a href="#pou">Points of Unity</a>
             <a href="#positions">Position Papers</a>
             <a href="#join">Join Us</a>
             <a href="#contact">Contact</a>
@@ -35,15 +37,15 @@
     </figure>
   </section>
 
-  <section id="points">
-      <h2>Points of Unity</h2>
+  <section id="points" data-aos="fade-up">
+      <h2 id="pou">Points of Unity</h2>
       <h4>Refoundation begins the project of transforming DSA from a pressure group to a mass working class, socialist party—born of movements for justice, community mobilization, and rank-and-file labor power. As DSA members, we yearn for a future where all power is held by the working class with common ownership of the means of production throughout the world. Here are our points of unity:</h4>
-      <ol>
+      <ol data-aos="fade-up">
           <li>We are Marxists and revolutionary socialists. We believe that capitalism is an unjust, violent, irrational, and exploitative system which must be overturned and replaced by socialism. Though we support any reform that makes our lives more bearable
               and fulfilling, we believe that socialism can only be won by confronting and overthrowing capitalists. We want complete economic, social, and political power in the hands of the working class.</li>
           <li>We believe in the centrality of working class struggle. Struggle and class consciousness conditions us for political and economic power. No other class in society, with its unique position literally at the point of production, has the power and
         ability to strike, stopping services and production and restarting these services under its own initiative. Additionally, we understand that organized working class struggle is inextricably linked to all efforts toward struggles for liberation.</li>
-      <li><img class="dems" src="https://archive.org/download/no-democrats/no-democrats.png" alt="no-democrats">We believe the immediate goal of the Democratic Socialists of America should be founding a mass working-class, socialist party. We understand that building a mass working class party will not happen overnight, and it require much more than running
+      <li>We believe the immediate goal of the Democratic Socialists of America should be founding a mass working-class, socialist party. We understand that building a mass working class party will not happen overnight, and it require much more than running
         open socialists or communists for office. Our vision of a mass working-class party has a foundation in movement-building, base-building, labor power, tenant organizations, and local struggles that are linked nationally.</li>
       <li>We believe the Democratic and Republican parties will never look out for the interests of working people; they only represent the interests of the capitalist ruling class. Though there may be short-term gain in running socialists on Democratic ballot
         lines, we believe that any attempts to reform the Democratic Party is ultimately harmful to our aims of building a mass working class party.</li>
