--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <li>We are anti-imperialists; we see the fight for socialism as an international one. Any war launched by the ruling class is bound to make the world more dangerous, dictatorial, and chaotic, pitting ordinary people against each other. Our duty is to
         oppose all US imperial interventions abroad. We believe that the phrase “workers of the world unite” is as relevant as it was when written 150 years ago, and is the only way toward a worthwhile future.</li>
     </ol>
+    <img class="crane" src="https://www.marxists.org/subject/art/visual_arts/satire/crane/crane5.jpg" alt="pariscommune">
 
     <img class="hammerandsickle" src="https://68.media.tumblr.com/4bb6d598ced1e52f7df891ead53bcc74/tumblr_o0v4x2rPyR1rydgnho1_500.gif" alt="hammerandsickle">
 
