fixed contact anchor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#pou">Points of Unity</a>
       <a href="#positions">Position Papers</a>
       <a href="#join">Join Us</a>
-      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
     </div>
   </nav>
 
