--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="stylesheets/styles.css" />
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <script src="bower_components/aos/dist/aos.js"></script>
+  <script src="js/figures.js"></script>
+
 </head>
 
 <body>
@@ -141,7 +143,8 @@
   </footer>
 
   <script>
-    AOS.init();
+   AOS.init();
+   Figure.init();
   </script>
   <script src="https://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
   <script src="https://www.amcharts.com/lib/3/maps/js/usaHigh.js" type="text/javascript"></script>
